fix block priority spacing

--- a/src/scss/partials/_block.scss
+++ b/src/scss/partials/_block.scss
@@ -142,6 +142,10 @@
 
     .block__content .split {
       margin-bottom: 0;
+
+      @include mq($from: l) {
+        margin-bottom: 40px;
+      }
     }
   }
 
